'mouseenter' mouse compat event not fired when listeners for touch events https://bugs.webkit.org/show_bug.cgi?id=128534

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-02-21
Reviewed by Andreas Kling.

Source/WebCore:

The code dispatching mouseenter and mouseleave events was making the assumption that
only mouse move would cause Document::updateHoverActiveState.

This is not true in some cases. In the case of this bug, the first touch handler sets
the hover state. From there, the code handling enter/leave is in an inconsistent state.

This patch changes the delivery of mouse enter/leave events to be done through the regular
processing of mouse events. The update is done with the mouseover and mouseout events.

* dom/Document.cpp:
(WebCore::Document::prepareMouseEvent):
(WebCore::Document::updateHoverActiveState):
* dom/Document.h:
* page/EventHandler.cpp:
(WebCore::nearestCommonHoverAncestor):
(WebCore::hierarchyHasCapturingEventListeners):
(WebCore::EventHandler::updateMouseEventTargetNode):

LayoutTests:

The existing tests for mouseenter/mouseleave had very poor readability which made them
useless for debugging.
This updates them to log what cause the events, and log all the events everywhere on the page.

* fast/events/mouseenter-mouseleave-capture-expected.txt:
* fast/events/mouseenter-mouseleave-capture.html:
* fast/events/mouseenter-mouseleave-expected.txt:
* fast/events/mouseenter-mouseleave.html:


Canonical link: https://commits.webkit.org/147203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164495 268f45cc-cd09-0410-ab3c-d52691b4dbfc